@@ -285,6 +285,19 @@ ignore this header when sent by the Lynx client.
 generated by mod_rewrite in apache 1.3.  The result is an error from MSIE
 saying it cannot download the requested file.  There are more details
 in <a href="http://bugs.apache.org/index/full/4118">PR#4118</a>.
+</P>
+<P>
+A workaround is to add the following to your server's configuration
+files:
+</P>
+<PRE>
+    BrowserMatch "MSIE 4\.0" force-no-vary
+</PRE>
+<P>
+(This workaround is only available with releases <STRONG>after</STRONG>
+1.3.6 of the Apache Web server.)
+</P>
+
 
 <!--#include virtual="footer.html" -->
 </BODY>
